# timehud

./: .gitignore  CLAUDE.md  README.md  build.sh  install-appimage.sh  install.sh  pyproject.toml  requirements.txt  timehud
.github/workflows/: build-appimage.yml  test.yml
app/: .DirIcon  entrypoint.sh  requirements.txt  timehud.desktop
app/usr/share/applications/: timehud.desktop
docs/superpowers/plans/: 2026-07-13-presets-engine-packaging.md  2026-07-13-themes-and-polish.md  2026-07-14-interval-mode-and-fixes.md
docs/superpowers/specs/: 2026-07-13-presets-and-refactor-design.md  2026-07-13-themes-and-polish-design.md  2026-07-14-interval-mode-and-fixes-design.md
packaging/aur/: .SRCINFO  PKGBUILD  README.md
scripts/: prepare_appdir.sh
src/timehud/: __init__.py  __main__.py  config.py  main.py  menus.py  overlay.py  settings_dialog.py  sound_manager.py  themes.py  timer_engine.py  widgets.py
tests/: conftest.py  test_config.py  test_overlay.py  test_themes.py  test_timer_engine.py
